chore: replace html entity with character

--- a/docs/languages/typescript/methodology-ts.mdx
+++ b/docs/languages/typescript/methodology-ts.mdx
@@ -82,7 +82,7 @@ Runtime environments that are explicitly supported are:
 [deno-file-streaming](https://github.com/denoland/deno/issues/11018)
 
 <Callout title="Note" type="info">
-  For teams interested in working directly with the SDK&apos;s source files, our SDK
+  For teams interested in working directly with the SDK's source files, our SDK
   leverages TypeScript `v5` features. To directly consume these source files,
   your environment should support TypeScript version 5 or higher. This
   requirement applies to scenarios where direct access to the source is
@@ -132,7 +132,7 @@ const result = await sdk.doTheThing({
 The TypeScript SDK generates a type for each request, response, and shared model in your OpenAPI schema. Each model is backed by a [Zod](https://zod.dev/) schema that validates the objects at runtime.
 
 <Callout title="Note" type="info">
-  It&apos;s important to note that data validation is run on user input when calling
+  It's important to note that data validation is run on user input when calling
   an SDK method _and on the subsequent response data from the server_. If
   servers are not returning data that matches the OpenAPI spec, then validation
   errors are thrown at runtime.
@@ -187,9 +187,9 @@ All generated models have this overall structure. By pinning the types with runt
 </Spotlight>
 
 <Callout title="Note" type="info">
-It&apos;s important to note that Zod is a peer dependency.
+It's important to note that Zod is a peer dependency.
 
-The reason for listing Zod as a peer dependency is to use the user&apos;s installation of Zod if they have it. Every popular package manager, except for Yarn, says, &quot;If the user doesn&apos;t have a peer dependency installed, I&apos;m gonna go ahead and install it and make it available&quot;.
+The reason for listing Zod as a peer dependency is to use the user's installation of Zod if they have it. Every popular package manager, except for Yarn, says, &quot;If the user doesn't have a peer dependency installed, I'm gonna go ahead and install it and make it available&quot;.
 
 Why does Speakeasy use peer dependencies? There are situations where the `node_modules` tree ends up with multiple Zod versions if the user has a different version of Zod installed than what the SDK requires. For example:
 
