chore: fix typos * chore: update pr preview workflow

--- a/openapi/components.mdx
+++ b/openapi/components.mdx
@@ -7,10 +7,9 @@ description: "Master the Components Object in OpenAPI to efficiently reuse schem
 
 import { Table } from "@/mdx/components";
 
-The Components object in OpenAPI are reusable bits of OpenAPI description, which
-can then be [referenced](/openapi/references). Reusing components allows for
-smaller file-sizes, reduces conflicts, and improves consistency across the API.
-Components can even be shared them across multiple documents, allowing for
+Components in OpenAPI are reusable bits of OpenAPI description, which can then be [referenced](/openapi/references). Reusing components allows for smaller file-sizes, reduces conflicts, and improves consistency across the API.
+
+Components can even be shared between multiple documents, allowing for
 improved reuse between multiple APIs.
 
 ```yaml
@@ -55,10 +54,7 @@ components:
       bearerFormat: JWT
 ```
 
-Components can be referenced in other parts of the OpenAPI document using the
-`$ref` keyword. The `$ref` keyword is a JSON Pointer to the component, which
-is a string that starts with `#/components/` and then the component type
-and name. For example, to reference the `User` schema defined in the
+Components can be referenced in other parts of the OpenAPI document using the `$ref` keyword. The `$ref` keyword is a JSON Pointer to the component, which is a string that starts with `#/components/` and then the component type and name. For example, to reference the `User` schema defined in the
 Components Object, you would use the following `$ref`:
 
 ```yaml
