chore: fix typos * chore: update pr preview workflow

--- a/guides/hooks/sentry-error-hook.mdx
+++ b/guides/hooks/sentry-error-hook.mdx
@@ -30,7 +30,7 @@ This guide will show you how to use SDK hooks to integrate error collection into
 
 ## Adding the Sentry SDK to your project
 
-To add the Sentry SDK to your project, you will need to add the dependancy to your Speakeasy SDK's `gen.yaml` file under the dependancies section:
+To add the Sentry SDK to your project, you will need to add the dependency to your Speakeasy SDK's `gen.yaml` file under the dependancies section:
 
 ```yaml
 configVersion: 2.0.0
@@ -44,7 +44,7 @@ typescript:
         '@sentry/node': ^8.9.2 # <- This is the line you need to add, ensure the version you add adheres to NPM package standards.
 ```
 
-After adding the dependency, the Sentry SDK will be included in your projects package.json file everytime you generate your SDK.
+After adding the dependency, the Sentry SDK will be included in your projects package.json file every time you generate your SDK.
 
 ## Adding your first SDK hook
 
