chore: fix typos * chore: update pr preview workflow

--- a/guides/hooks/posthog-telemetry-hook.mdx
+++ b/guides/hooks/posthog-telemetry-hook.mdx
@@ -32,7 +32,7 @@ You can inject custom actions at the following points in the SDK's execution:
 
 ## Adding the Posthog SDK to your project
 
-To add the Posthog SDK to your project, you will need to add the dependancy to your Speakeasy SDK's `gen.yaml` file under the dependancies section:
+To add the Posthog SDK to your project, you will need to add the dependency to your Speakeasy SDK's `gen.yaml` file under the dependancies section:
 
 ```yaml
 configVersion: 2.0.0
@@ -46,7 +46,7 @@ typescript:
       posthog-node: ^4.0.1 <- This is the line you need to add, ensure the version you add adheres to NPM package standards.
 ```
 
-After adding the dependency, the Posthog SDK will be included in your projects package.json file everytime you generate your SDK.
+After adding the dependency, the Posthog SDK will be included in your projects package.json file every time you generate your SDK.
 
 ## Adding your first SDK hook
 
