chore: fix typos * chore: update pr preview workflow

--- a/api-design/pagination.mdx
+++ b/api-design/pagination.mdx
@@ -24,8 +24,7 @@ people, but then Facebook and Amazon rock up with ~10,000 employees each, and
 every time somebody loads that data the entire API server crashes, along with
 every application that uses it, and every application that uses that.
 
-Breaking down a large dataset into smaller chunks helps to solve this, and it
-works a lot like pagination does in the browser: when searching on a functioning
+Breaking down a large dataset into smaller chunks helps to solve this, and it works much like pagination does in the browser: when searching on a functioning
 search engine like Duck Duck Go or Ecosia, the results are broken down into page
 1, page 2... page 34295. It doesn't just throw every single result into the
 browser in the worlds longest slowest web response, forcing computer fans to
