--- a/docs/create-client-sdks.mdx
+++ b/docs/create-client-sdks.mdx
@@ -49,7 +49,7 @@ curl -fsSL https://go.speakeasy.com/cli-install.sh | sh
 winget install speakeasy
 ```
 
-```bash !!tabs Choclatey
+```bash !!tabs Chocolatey
 # Using Chocolatey:
 choco install speakeasy
 ```
