chore: fix typos * chore: update pr preview workflow

--- a/docs/enterprise-support.mdx
+++ b/docs/enterprise-support.mdx
@@ -34,7 +34,7 @@ Speakeasy is committed to providing rapid response and resolution to any issues 
       definition:
         "Generated Terraform providers or SDKs do not work (severe functional issues)",
       sla: "First response within 1 hour",
-      initiation: "E-mail support@speakeasy.com",
+      initiation: "Email support@speakeasy.com",
       credits: "5% of the fee applicable in the month per incident",
     },
     {
@@ -42,7 +42,7 @@ Speakeasy is committed to providing rapid response and resolution to any issues 
       definition:
         "Generated Terraform providers or SDKs exhibit severe ergonomic or functional issues that significantly impact customers, with no available workaround",
       sla: "First response within 3 hours",
-      initiation: "E-mail support@speakeasy.com",
+      initiation: "Email support@speakeasy.com",
       credits: "3% of the fee applicable in the month per incident",
     },
     {
@@ -50,7 +50,7 @@ Speakeasy is committed to providing rapid response and resolution to any issues 
       definition:
         "Generated Terraform providers or SDKs have bugs with minor ergonomic impact on customers, feature requests",
       sla: "Prioritize as part of standard Speakeasy development practice, visible in public roadmap",
-      initiation: "E-mail support@speakeasy.com",
+      initiation: "Email support@speakeasy.com",
       credits: "1% of the fee applicable in the month per incident",
     },
   ]}
