chore: fix typos * chore: update pr preview workflow

--- a/docs/api-contract-tests.mdx
+++ b/docs/api-contract-tests.mdx
@@ -717,7 +717,7 @@ By default, tests will be generated to run against Speakeasy's mock server (URL 
 
 The generator can be configured to run all tests against another URL or just individual tests. This is done through the use `x-speakeasy-test-server` extensions in the `.speakeasy/tests.arazzo.yaml` file.
 
-If the extension is found at the top level of the Arazzo file then all workflows/tests will be configured to run againsts the specified server URL. If the extension is found within a workflow then only that workflow will be configured to run against the specified server URL.
+If the extension is found at the top level of the Arazzo file then all workflows/tests will be configured to run against the specified server URL. If the extension is found within a workflow then only that workflow will be configured to run against the specified server URL.
 
 The server URL can either be a static URL or a `x-env: EXAMPLE_ENV_VAR` value that will be pull the value from the environment variable `EXAMPLE_ENV_VAR` where the name of the environment variable can be any specified name.
 
