chore: fix typos * chore: update pr preview workflow

--- a/docs/api-contract-tests.mdx
+++ b/docs/api-contract-tests.mdx
@@ -578,7 +578,7 @@ workflows:
 
 When using the `payload` field of a request body input, the value can be a static value to use, a value with interpolated [Runtime Expressions](/openapi/arazzo#runtime-expressions) or a [Runtime Expression](/openapi/arazzo#runtime-expression) by itself.
 
-The payload value can then be overlayed using the `replacements` field which represents a list of targets within the payload to replace with the value of the replacements, which themselves can be a static valuue or a [Runtime Expression](/openapi/arazzo#runtime-expression).
+The payload value can then be overlayed using the `replacements` field which represents a list of targets within the payload to replace with the value of the replacements, which themselves can be a static value or a [Runtime Expression](/openapi/arazzo#runtime-expression).
 
 ```yaml
 arazzo: 1.0.0
