--- a/docs/api-contract-tests.mdx
+++ b/docs/api-contract-tests.mdx
@@ -578,7 +578,7 @@ workflows:
 
 When using the `payload` field of a request body input, the value can be a static value to use, a value with interpolated [Runtime Expressions](/openapi/arazzo#runtime-expressions) or a [Runtime Expression](/openapi/arazzo#runtime-expression) by itself.
 
-The payload value can then be overlayed using the `replacements` field which represents a list of targets within the payload to replace with the value of the replacements, which themselves can be a static valuue or a [Runtime Expression](/openapi/arazzo#runtime-expression).
+The payload value can then be overlayed using the `replacements` field which represents a list of targets within the payload to replace with the value of the replacements, which themselves can be a static value or a [Runtime Expression](/openapi/arazzo#runtime-expression).
 
 ```yaml
 arazzo: 1.0.0
@@ -717,7 +717,7 @@ By default, tests will be generated to run against Speakeasy's mock server (URL 
 
 The generator can be configured to run all tests against another URL or just individual tests. This is done through the use `x-speakeasy-test-server` extensions in the `.speakeasy/tests.arazzo.yaml` file.
 
-If the extension is found at the top level of the Arazzo file then all workflows/tests will be configured to run againsts the specified server URL. If the extension is found within a workflow then only that workflow will be configured to run against the specified server URL.
+If the extension is found at the top level of the Arazzo file then all workflows/tests will be configured to run against the specified server URL. If the extension is found within a workflow then only that workflow will be configured to run against the specified server URL.
 
 The server URL can either be a static URL or a `x-env: EXAMPLE_ENV_VAR` value that will be pull the value from the environment variable `EXAMPLE_ENV_VAR` where the name of the environment variable can be any specified name.
 
