--- a/openapi/frameworks/hono.mdx
+++ b/openapi/frameworks/hono.mdx
@@ -29,7 +29,9 @@ The quality of your OpenAPI document determines the quality of generated SDKs an
 
 We'll then use the improved OpenAPI document to generate an SDK using Speakeasy.
 
-Finally, we'll use a simplified example to demonstrate how to use the generated SDK and how to add SDK creation to a CI/CD pipeline so that Speakeasy automatically generates fresh SDKs whenever your Hono API changes in the future.
+W'll explain how to add SDK creation to a CI/CD pipeline so that Speakeasy automatically generates fresh SDKs whenever your Hono API changes in the future.
+
+Finally, we'll use a simplified example to demonstrate how to use the generated SDK.
 
 ## Requirements
 
@@ -41,8 +43,7 @@ If you don't have a Hono app, or you want to follow along step-by-step, you can 
 
 The following should be installed on your machine:
 
-- [Node.js version 18 or above](https://nodejs.org/en/download) (we used Node v20.18.0), which the Hono Node.js Adapter requires.
-- The [JS-YAML](https://www.npmjs.com/package/js-yaml) package, which we'll use to convert the OpenAPI document to a YAML file.
+- [Node.js version 18 or above](https://nodejs.org/en/download) (we used Node v22.15.1), which the Hono Node.js Adapter requires.
 - The [Speakeasy CLI](/docs/speakeasy-cli/getting-started), which we'll use to generate an SDK from the OpenAPI document.
 
 If you're using the [example application](https://github.com/speakeasy-api/hono-openapi-example.git), add a `.env` file containing the following environment variables to the root of your project:
@@ -69,12 +70,6 @@ Next, create a `schemas.ts` file in the `src` folder and create Zod schemas for 
 ```typescript schema.ts
 import { z } from '@hono/zod-openapi';
 
-export const UserInsertSchema = z
-  .object({
-    name: z.string(),
-    age: z.number(),
-  });
-
 export const UserSelectSchema = z
   .object({
     id: z.string(),
@@ -83,10 +78,16 @@ export const UserSelectSchema = z
     ,
   });
 
+export const UserInsertSchema = z
+  .object({
+    name: z.string(),
+    age: z.number(),
+  });
+
 export const patchUserSchema = UserInsertSchema.partial();
 ```
 
-The `z` object should be imported from `@hono/zod-openapi`.
+The `z` object should be imported from `@hono/zod-openapi`. Note that Hono also has a [Standard Schema Validator](https://github.com/honojs/middleware/tree/main/packages/standard-validator) that lets you write schema and validate the incoming values using the same interface for multiple validation libraries that support Standard Schema. Supported validation libraries include Zod, Valibot, and ArkType.
 
 Create schemas for your request-query parameters, messages, and error responses:
 
@@ -287,7 +288,7 @@ import type { AppRouteHandler } from '@/lib/types';
 import type { CreateRoute, GetOneRoute, ListRoute } from '@/routes/users/users.routes';
 
 export const list: AppRouteHandler<ListRoute> = async (c) => {
-  // Add db query to get all users
+  // TODO: db query to get all users
   return c.json([{
     age: 42,
     id: '123',
@@ -302,17 +303,17 @@ export const list: AppRouteHandler<ListRoute> = async (c) => {
 export const create: AppRouteHandler<CreateRoute> = async (c) => {
   const user = c.req.valid('json');
   console.log({ user });
-  // Add db query create a user
+  // TODO: db query to create a user
   return c.json({
-    age: 42,
     id: '2342',
-    name: 'John Doe',
+    age: user.age,
+    name: user.name,
   }, 200);
 };
 
 export const getOne: AppRouteHandler<GetOneRoute> = async (c) => {
   const { id } = c.req.valid('param');
-  // Add db query to get a user by id
+  // TODO: db query to get a user by id
   const foundUser = {
     age: 50,
     id,
@@ -446,26 +447,25 @@ Let's use the [Scalar UI middleware](https://www.npmjs.com/package/@scalar/hono-
 Install the middleware:
 
 ```bash Terminal
-npm install @scalar/hono-api-reference
+npm i @scalar/hono-api-reference
 ```
 
-Import the `apiReference` middleware in the `src/lib/configureOpenAPI.ts` file:
+Import the `Scalar` middleware in the `src/lib/configureOpenAPI.ts` file:
 
 ```typescript configureOpenAPI.ts
-import { apiReference } from '@scalar/hono-api-reference'
+import { Scalar } from '@scalar/hono-api-reference'
 ```
 
-Add `apiReference` as a handler for GET requests to the `/ui` route:
+Add `Scalar` as a handler for GET requests to the `/ui` route:
 
-```typescript configureOpenAPI.ts mark=3
+```typescript configureOpenAPI.ts 
+// !mark(3)
 export default function configureOpenAPI(app: OpenAPIHono) {
-  app.doc31('/doc', openAPIObjectConfig);
-  app.get(
+  app.doc31('/doc', openAPIObjectConfig),
+    app.get(
     '/ui',
-    apiReference({
-      spec: {
-        url: '/doc',
-      },
+    Scalar({     
+      url: '/doc',
       pageTitle: 'Users Management API',
     }),
   );
@@ -482,7 +482,7 @@ You can see the parameters required for API endpoints and try out the different 
 
 The request and response content schemas of the OpenAPI document are inline:
 
-```json focus= 13:20
+```json 
 "components": {
     "schemas": {},
     "parameters": {}
@@ -495,6 +495,7 @@ The request and response content schemas of the OpenAPI document are inline:
           "description": "The list of users",
           "content": {
             "application/json": {
+              // !focus(1:8)
               "schema": {
                 "type": "array",
                 "items": {
@@ -507,9 +508,10 @@ The request and response content schemas of the OpenAPI document are inline:
 
 Let's make these schemas reusable by adding them to the OpenAPI [Components Object](https://swagger.io/specification/#components-object).
 
-Use the [`.openapi()` method on the Zod object](https://github.com/asteasolutions/zod-to-openapi#the-openapi-method) to register your Zod schemas as referenced components in the `src/schemas.ts` file:
+Use the [`.openapi()`](https://github.com/asteasolutions/zod-to-openapi#the-openapi-method) method on the Zod object to register your Zod schemas as referenced components in the `src/schemas.ts` file:
 
-```typescript schemas.ts mark=7
+```typescript schemas.ts 
+// !mark(7)
 export const UserSelectSchema = z
   .object({
     id: z.string(),
@@ -547,7 +549,8 @@ This adds your schemas to the OpenAPI components object:
 
 The schemas are referenced using a [Reference Object](https://swagger.io/specification/#reference-object) (`$ref`), which is a reference identifier that specifies the location (as a URI) of the value being referenced.
 
-```json focus=7
+```json 
+// !focus(7)
   "responses": {
     "200": {
       "description": "The created user",
@@ -567,7 +570,28 @@ Let's add additional OpenAPI metadata to our schemas.
 
 In the `src/schemas.ts` file, add example values by passing in an object with an `example` property to the `openapi` method:
 
-```typescript schemas.ts mark=4:6,8:10
+```typescript schemas.ts 
+// !mark(4:6)
+export const UserSelectSchema = z
+  .object({
+    id: z.string()
+      .openapi({
+        example: '123',
+      }),
+    // !mark(2:4)
+    name: z.string()
+      .openapi({
+        example: 'John Doe',
+      }),
+    // !mark(2:4)
+    age: z.number()
+      .openapi({
+        example: 42,
+      }),
+  })
+  .openapi('UserSelect');
+
+// !mark(4:6)
 export const UserInsertSchema = z
   .object({
     name: z.string()
@@ -575,33 +599,18 @@ export const UserInsertSchema = z
         example: 'John Doe',
       }),
     age: z.number()
+      // !mark(1:3)
       .openapi({
         example: 42,
       }),
   })
   .openapi('UserInsert');
-
-export const UserSelectSchema = z
-  .object({
-    id: z.string()
-      .openapi({
-        example: '123',
-      }),
-    name: z.string()
-      .openapi({
-        example: 'John Doe',
-      }),
-    age: z.number()
-      .openapi({
-        example: 42,
-      }),
-  })
-  .openapi('UserSelect');
 ```
 
 Define the route parameters for parameter schema:
 
-```typescript schemas.ts mark=6:9
+```typescript schemas.ts 
+// !mark(6:9)
 export const idParamsSchema = z.object({
   id: z
     .string()
@@ -654,7 +663,8 @@ We can add metadata to the tag by passing in a [Tag Object](https://swagger.io/s
 
 Add a tag to the root OpenAPI object `openAPIObjectConfig` in the `src/lib/configureOpenAPI.ts` file:
 
-```typescript configureOpenAPI.ts mark=7:14
+```typescript configureOpenAPI.ts 
+// !mark(7:14)
 export const openAPIObjectConfig = {
   openapi: '3.1.0',
   externalDocs: {
@@ -677,7 +687,8 @@ When validating an OpenAPI document, Speakeasy expects a list of servers at the 
 
 Add a server by adding a `servers` property to the `openAPIObjectConfig` object:
 
-```typescript configureOpenAPI.ts mark=7:12
+```typescript configureOpenAPI.ts 
+// !mark(7:12)
 export const openAPIObjectConfig = {
   openapi: '3.1.0',
   externalDocs: {
@@ -699,13 +710,14 @@ export const openAPIObjectConfig = {
 - Extension fields must be prefixed with `x-`.
 - Speakeasy uses extensions that start with `x-speakeasy-`.
 
-Let's add a Speakeasy extension that adds retries to requests from Speakeasy SDKs by adding a top-level `x-speakeasy-retries` schema to the OpenAPI document. We can also override the retry strategy per operation.
+Let's add a [Speakeasy extension](https://www.speakeasy.com/docs/speakeasy-reference/extensions) that adds retries to requests from Speakeasy SDKs by adding a top-level `x-speakeasy-retries` schema to the OpenAPI document. We can also override the retry strategy per operation.
 
 ### Adding global retries
 
 Apply the Speakeasy retries extension globally by adding the following `'x-speakeasy-retries'` property to the `openAPIObjectConfig` object:
 
-```typescript configureOpenAPI.ts mark=13:23
+```typescript configureOpenAPI.ts 
+// !mark(13:23)
 export const openAPIObjectConfig = {
   openapi: '3.1.0',
   externalDocs: {
@@ -733,9 +745,10 @@ export const openAPIObjectConfig = {
 
 ### Adding retries per method
 
-To create a unique retry strategy for a single route, add an `'x-speakeasy-retries'` property to the `createRoute` method call's argument object:
+To create a unique retry strategy for a single route, add an `'x-speakeasy-retries'` property to the `createRoute` method call's argument object in the `src/routes/users/users.routes.ts` file:
 
-```typescript users.routes.ts mark=6:16
+```typescript users.routes.ts 
+// !mark(6:16)
 export const list = createRoute({
   'operationId': 'getUsers',
   'path': '/users',
@@ -760,7 +773,19 @@ Before generating an SDK, we need to save the Hono Zod OpenAPI-generated OpenAPI
 
 ### Saving the OpenAPI document to a YAML file using a Node.js script
 
-Let's create a script to convert the OpenAPI object to a YAML file. We'll use the JS-YAML library to convert the OpenAPI object to a YAML string.
+First install the [JS-YAML](https://www.npmjs.com/package/js-yaml) package:
+
+```bash Terminal
+npm i js-yaml
+```
+
+Then install the types for the package:
+
+```bash Terminal
+npm i --save-dev  @types/js-yaml
+```
+
+Now let's create a script to convert the OpenAPI object to a YAML file. We'll use the JS-YAML library to convert the OpenAPI object to a YAML string.
 
 Create a script called `generateOpenAPIYamlFile.ts` in the `src` folder and add the following lines of code to it:
 
@@ -821,7 +846,7 @@ A lint report will be displayed in the terminal, showing errors, warnings, and h
 
 ![Speakeasy lint report](./assets/hono/speakeasy-lint-report.png)
 
-The Speakeasy Linter uses a [recommended set of rules](/docs/linting/linting#speakeasy-recommended) that you can [configure](/docs/linting#configuration).
+The Speakeasy Linter uses a [recommended set of rules](/docs/linting/linting#speakeasy-recommended) that you can configure.
 
 Speakeasy also has a [VS Code extension](https://marketplace.visualstudio.com/items?itemName=Speakeasy.speakeasy-vscode-extension) to help you validate your OpenAPI documents for the creation of production-grade SDKs.
 
@@ -842,7 +867,7 @@ In the terminal, you'll see the steps taken by Speakeasy to create the SDK.
 ```
 │ Workflow - success
 │ └─Target: sdk - success
-│   └─Source: SDK -OAS - success
+│   └─Source: Users API - success
 │     └─Validating Document - success
 │     └─Diagnosing OpenAPI - success
 │     └─Tracking OpenAPI Changes - success
@@ -854,11 +879,22 @@ In the terminal, you'll see the steps taken by Speakeasy to create the SDK.
 │     └─Load and Validate Document - success
 │     └─Generate SDK - success
 │     └─Compile SDK - success
+│     └─Setup Environment - success              
+│     └─Load and Validate Document - success     
+│     └─Generate SDK - success                   
+│   └─Generating Code Samples - success          
+│     └─Snapshotting Code Samples - success      
+│       └─Snapshotting Code Samples - success    
+│       └─Uploading Code Samples - success
 ```
 
 Speakeasy [validates](/docs/concepts#validation) the OpenAPI document to check that it's ready for code generation. Validation issues will be printed in the terminal. The generated SDK will be saved as a folder in your project.
 
 If you get ESLint styling errors, run the `speakeasy quickstart` command from outside your project.
+
+Speakeasy also offers suggested inprovements for your SDK, which you can see by opening the link to your Speakeasy Studio workspace in the terminal:
+
+![Speakeasy Studio showing SDK improvement suggestions](./assets/hono/speakeasy-studio-suggestions.png)
 
 ## Adding SDK generation to your GitHub Actions
 
@@ -882,7 +918,8 @@ npm create vite@latest
 
 Copy the SDK folder from your Hono app to the `src` directory of your TypeScript Vite project and delete the SDK folder in your Hono project.
 
-In the SDK `README.md` file, you'll find documentation about your Speakeasy SDK.
+In the SDK `README.md` file, you'll find documentation about your Speakeasy SDK. TypeScript SDKs generated with Speakeasy include an installable [Model Context Protocol (MCP) server](https://www.speakeasy.com/docs/model-context-protocol) where the various SDK methods are exposed as tools that can be invoked by AI applications. 
+Your SDK documentation includes instructions for installing the MCP server.
 
 Note that the SDK is not ready for production use. To get it production-ready, follow the steps outlined in your Speakeasy workspace.
 
@@ -894,7 +931,7 @@ Install the required Zod version:
 npm i zod
 ```
 
-Replace the code in the `src/main.ts` file with the following example code taken from the `sdk-typescript/docs/sdk/users/README.md` file:
+Replace the code in the `src/main.ts` file with the following example code taken from the `sdk-typescript/docs/sdks/users/README.md` file:
 
 ```typescript main.ts
 import { SDK } from './sdk-typescript/src/'; // Adjust the path as necessary eg if your generated SDK has a different name
@@ -917,7 +954,7 @@ Run the Vite dev server:
 npm run dev
 ```
 
-Enable CORS in your Hono dev server by importing the built-in CORS middleware:
+Enable CORS in your Hono dev server by importing the built-in CORS middleware in the `src/app.ts` file:
 
 ```typescript app.ts
 import { cors } from 'hono/cors';
@@ -978,5 +1015,12 @@ Property 'surname' does not exist on type 'UserSelect'
 This guide covered the basics of generating an OpenAPI document using Hono. Here are some resources to help you learn more about OpenAPI, the Hono Zod OpenAPI middleware, and Speakeasy:
 
 - [Hono Zod OpenAPI middleware documentation](https://github.com/honojs/middleware/tree/main/packages/zod-openapi): Learn more about generating an OpenAPI document and validating values and types using Zod. The topics covered include setup, handling validation errors, configuration, RPC mode, and authorization setup.
+
 - [Speakeasy documentation](/docs): Speakeasy has extensive documentation covering how to generate SDKs from OpenAPI documents, customize SDKs, and more.
 - [Speakeasy OpenAPI reference](/openapi): View a detailed reference for the OpenAPI Specification.
+
+- [Speakeasy Blog](https://www.speakeasy.com/blog): Read articles about OpenAPI, SDK generation, and more including:
+
+  - [Native JSONL support in your SDKs](https://www.speakeasy.com/blog/release-jsonl-support)
+  - [Introducing comprehensive SDK Testing](https://www.speakeasy.com/blog/release-sdk-testing)
+  - [Model Context Protocol: TypeScript SDKs for the Agentic AI ecosystem](https://www.speakeasy.com/blog/release-model-context-protocol)
