add improving OpenAPI using overlays and transformations

--- a/openapi/frameworks/hono.mdx
+++ b/openapi/frameworks/hono.mdx
@@ -848,7 +848,13 @@ A lint report will be displayed in the terminal, showing errors, warnings, and h
 
 The Speakeasy Linter uses a [recommended set of rules](/docs/linting/linting#speakeasy-recommended) that you can configure.
 
-Speakeasy also has a [VS Code extension](https://marketplace.visualstudio.com/items?itemName=Speakeasy.speakeasy-vscode-extension) to help you validate your OpenAPI documents for the creation of production-grade SDKs.
+Speakeasy has a [VS Code extension](https://marketplace.visualstudio.com/items?itemName=Speakeasy.speakeasy-vscode-extension) to help you validate your OpenAPI documents for the creation of production-grade SDKs.
+
+### Improving and Customizing the OpenAPI document using Speakeasy Overlays and Transformations
+
+Speakeasy [transformations](https://www.speakeasy.com/docs/prep-openapi/transformations) are predefined functions that modify the OpenAPI document to improve it for SDK generation. You can use them to remove unused components, filter operations, and format the OpenAPI document.
+
+[Overlays](https://www.speakeasy.com/docs/prep-openapi/overlays/create-overlays) let you create overlay documents that can be merged with an OpenAPI document. This lets you update and use an OpenAPI document without modifying the original OpenAPI document, which is useful when the same OpenAPI document is used in multiple places. Common use cases include adding Speakeasy extensions, adding examples, and hiding internal APIs from a public SDK.
 
 ### Creating an SDK from the Speakeasy CLI
 
@@ -892,7 +898,7 @@ Speakeasy [validates](/docs/concepts#validation) the OpenAPI document to check t
 
 If you get ESLint styling errors, run the `speakeasy quickstart` command from outside your project.
 
-Speakeasy also offers suggested inprovements for your SDK, which you can see by opening the link to your Speakeasy Studio workspace in the terminal:
+Speakeasy also suggests improvements for your SDK, using [Speakeasy Suggest](https://www.speakeasy.com/docs/prep-openapi/maintenance), which is an AI-powered tool in Speakeasy Studio. You can see suggestions by opening the link to your Speakeasy Studio workspace in the terminal:
 
 ![Speakeasy Studio showing SDK improvement suggestions](./assets/hono/speakeasy-studio-suggestions.png)
 
