--- a/openapi/frameworks/hono.mdx
+++ b/openapi/frameworks/hono.mdx
@@ -38,7 +38,9 @@ Finally, we'll use a simplified example to demonstrate how to use the generated 
 This guide assumes that you have an existing Hono app and basic familiarity with Hono.
 
 <Callout title="Example repository" type="info">
-If you don't have a Hono app, or you want to follow along step-by-step, you can clone the [Speakeasy Hono example repo](https://github.com/speakeasy-api/hono-openapi-example.git) to access the example code used in this tutorial. The `initial-app` branch has the initial state of the app that we'll use to start this tutorial.
+The source code for the completed example is available in the 
+[Speakeasy Hono example repository](https://github.com/speakeasy-api/examples/tree/main/framework-hono-ts).
+If you want to follow along step-by-step, you can clone the [Speakeasy Hono example starter repository](https://github.com/speakeasy-api/hono-openapi-example.git), which has the initial state of the app that we'll use to start this tutorial.
 </Callout>
 
 The following should be installed on your machine:
