--- a/api-design/errors.mdx
+++ b/api-design/errors.mdx
@@ -41,11 +41,11 @@ them effectively.
 
 HTTP status codes only set the scene for the category of issue that has
 occurred. An error like `400 Bad Request` is generally used as a vague catch-all
-error that covers a whole range of potential issues. 
+error that covers a whole range of potential issues.
 
 More information will be required to help developers understand what went wrong,
 and how to fix it, without having to dig through logs or contact the support
-team. 
+team.
 
 Error details are useful for:
 
@@ -173,7 +173,7 @@ up) but it _can_, and that covers the "link to documentation" requirement too.
 
 ![API Documentation for the SignatureAPI, with an explanation of what the error is, what happened, and how to fix it](./assets/errors-documentation.png)
 
-Why have both a `title` and a `description`? This allows the error to be used in
+Why have both a `title` and problem `detail`? This allows the error to be used in
 a web interface, where certain errors are caught and handled internally, but
 other errors are passed on to the user to help errors be considered as
 functionality instead of just "Something went wrong, erm, maybe try again or
@@ -199,6 +199,13 @@ Content-Type: application/problem+json
 ```
 
 This example shows the same `type`, `title`, and `detail`, but has extra bits.
+
+As per [RFC 9457](https://www.rfc-editor.org/rfc/rfc9457.html), the
+`title` (such as `"Not enough credit."`should be the same for all problems with the same `type`
+(`"https://example.com/probs/out-of-credit"` in this example),
+while the `detail` can include information that is specific to the
+current problem occurrence. In this case, the `detail` shows the
+the attempted debit amount `50` that exceeds the current balance `30`.
 
 The `instance` field allows the server to point to a specific resource (or endpoint)
 which the error is relating to. Again URI could resolve (it's a relative path to
@@ -239,7 +246,7 @@ Some folks want to consider HTTP as a "dumb pipe" that purely exists to move dat
 down, and part of that thinking suggests that so long as the HTTP API was able to respond then thats a 200 OK.
 
 This is fundamentally problematic, but the biggest issue is that it delegates
-all of the work of detecting success or failure to the client code. Caching tools will cache the error. Monitoring tools 
+all of the work of detecting success or failure to the client code. Caching tools will cache the error. Monitoring tools
 will not know there was a problem. Everything will look absolutely fine despite mystery weirdness happening throughout the system. Don't do this!
 
 ### Single or Multiple Errors?
@@ -329,13 +336,13 @@ enough experience to avoid a lot of the common problems around.
 Smaller teams that are not in this privileged position can benefit from
 deferring to standards written by people who have more context on the task at
 hand. Companies the size of Facebook can roll their own error format and brute
-force their decisions into everyones lives with no pushback, but everyone on
+force their decisions into everyone's lives with no pushback, but everyone on
 smaller teams should stick to using simple standards like RFC 9457 to keep
 tooling interoperable and avoid reinventing the wheel.
 
 ### Retry-After
 
-API designers want their API to be as usable as possbile, so whenever it makes
+API designers want their API to be as usable as possible, so whenever it makes
 sense, let consumers know when and if they should come back and try again., and if so, when. The
 `Retry-After` header is a great way to do this.
 
