use #### headings for nested sections; use normal whitespace in claude.md

--- a/api-design/errors.mdx
+++ b/api-design/errors.mdx
@@ -298,7 +298,7 @@ where possible.
 
 When it comes to standards for error formats, there are two main contenders:
 
-**RFC 9457 - Problem Details for HTTP APIs**
+#### RFC 9457 - Problem Details for HTTP APIs
 
 The latest and greatest standard for HTTP error messages. There only reason not
 to use this standard is not knowing about it. It is technically new, released in
@@ -312,7 +312,7 @@ or other extensions.
 This helps avoid reinventing the wheel, and it's strongly recommended to use it
 if possible.
 
-**JSON:API Errors**
+#### JSON:API Errors
 
 [JSON:API](https://jsonapi.org/) is not so much a standard, but a popular
 specification used throughout the late 2010s. It focuses on providing a common
@@ -320,7 +320,7 @@ response format for resources, collections, and relationships, but it also has a
 decent [error format](https://jsonapi.org/format/#errors) which a lot of people
 like to replicate even if they're not using the entire specification.
 
-**Pick One**
+#### Pick One
 
 There has been a long-standing stalemate scenario where people do not implement
 standard formats until they see buy-in from a majority of the API community, or
