fix format typo

--- a/api-design/errors.mdx
+++ b/api-design/errors.mdx
@@ -201,7 +201,7 @@ Content-Type: application/problem+json
 This example shows the same `type`, `title`, and `detail`, but has extra bits.
 
 As per [RFC 9457](https://www.rfc-editor.org/rfc/rfc9457.html), the
-`title` (such as `"Not enough credit."`should be the same for all problems with the same `type`
+`title` (such as `"Not enough credit."`) should be the same for all problems with the same `type`
 (`"https://example.com/probs/out-of-credit"` in this example),
 while the `detail` can include information that is specific to the
 current problem occurrence. In this case, the `detail` shows the
