--- a/openapi/schemas/null.mdx
+++ b/openapi/schemas/null.mdx
@@ -42,9 +42,9 @@ schema:
     nullable: true
 ```
 
-## OpenAPI 3.1.X
+## OpenAPI v3.1
 
-OpenAPI 3.1 aligned describing `null` with JSON Schema. This allows for more precise API definitions, especially for APIs that need to explicitly support null values as valid inputs or outputs.
+OpenAPI v3.1 aligned describing `null` with JSON Schema. This allows for more precise API definitions, especially for APIs that need to explicitly support null values as valid inputs or outputs.
 
 To specify that a property, item, or response can be `null`, you can use the `type` keyword with a value of `null` or combine null with other types using the `oneOf` or type array syntax. This flexibility makes it easier to accurately model your data.
 
