--- a/posts/generating-mcp-from-openapi-lessons-from-50-production-servers/index.mdx
+++ b/posts/generating-mcp-from-openapi-lessons-from-50-production-servers/index.mdx
@@ -46,7 +46,7 @@ MCP is a fast-evolving space and can get complex, but for this guide, you only n
 
   The description can be seen as the "prompt". You need a high-quality description to ensure agents accurately and correctly identify the tool they need to call for a specific action.
 
-  ![MCP servers generated from OpenAPI](https://drafts.cc.ritza.co/uploads/upload_9b6f9567f076e461858a23a68166cddd.png)
+  ![MCP servers generated from OpenAPI](./assets/openapi-generator-mcp-tools.png)
 
 ## Optimizing OpenAPI Documents for MCP Servers
 
