Apply suggestions from code review
Co-authored-by: Chai Landau <112015853+chailandau@users.noreply.github.com>

--- a/openapi/security/security-schemes/security-http.mdx
+++ b/openapi/security/security-schemes/security-http.mdx
@@ -68,13 +68,13 @@ GET /secrets
 Authorization: Basic dXNlcjpwYXNzd29yZA==
 ```
 
-Basic is relatively simple mechanism to get started with, but risks leaking easy-to-decode passwords if used incorrectly. The example above is literally just `base64("user:password")`, but can fool some developers into thinking its actually encrypted or secret somehow.
+Basic is relatively simple mechanism to get started with, but risks leaking easy-to-decode passwords if used incorrectly. The example above is simply `base64("user:password")`, but can fool some developers into thinking its actually encrypted or secret.
 
-Much like API keys, another issue with Basic is that its generally working with long-lived credentials, and if intercepted these can be used by malicious actors until the credentials are revoked or expire.
+Much like API keys, another issue with Basic is that it's generally working with long-lived credentials, and if intercepted, these can be used by malicious actors until the credentials are revoked or expire.
 
 For these reasons it is generally best to avoid HTTP basic.
 
-Seeing as all APIs need to be accurately described warts and all, here's how to describe HTTP basic in OpenAPI:
+Since all APIs need to be accurately described (warts and all), here's how to describe HTTP basic in OpenAPI:
 
 <Table
   data={[
