--- a/openapi/security/security-schemes/security-http.mdx
+++ b/openapi/security/security-schemes/security-http.mdx
@@ -7,7 +7,7 @@ import { Table } from "@/mdx/components";
 
 # HTTP Security Scheme in OpenAPI
 
-The `http` security scheme is one of the most commonly used schemes because it covers anything using the HTTP header `Authorization`, which involves auth schemes like Basic, Digest, and Bearer. The full list of supports auth schemes for `type: http` is outsourced to the [IANA HTTP Authentication Scheme Registry](https://www.iana.org/assignments/http-authschemes/http-authschemes.xhtml).
+The `http` security scheme is one of the most commonly used schemes because it covers anything using the HTTP header `Authorization`. This is a big list, including auth schemes like HTTP Basic, HTTP Digest, and Bearer. The full list of supports auth schemes for `type: http` is outsourced to the [IANA HTTP Authentication Scheme Registry](https://www.iana.org/assignments/http-authschemes/http-authschemes.xhtml).
 
 Of that list, the most likely to be used for a modern API are:
 
@@ -72,9 +72,9 @@ Basic is relatively simple mechanism to get started with, but risks leaking easy
 
 Much like API keys, another issue with Basic is that it's generally working with long-lived credentials, and if intercepted, these can be used by malicious actors until the credentials are revoked or expire.
 
-For these reasons it is generally best to avoid HTTP basic.
+For these reasons it is generally best to avoid HTTP Basic.
 
-Since all APIs need to be accurately described (warts and all), here's how to describe HTTP basic in OpenAPI:
+Since all APIs need to be accurately described (warts and all), here's how to describe HTTP Basic in OpenAPI:
 
 <Table
   data={[
